# Fooling_XAI

./: .gitignore  Datasets.xlsx  LICENSE  README.md  example.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
attacks/data_poisoning/: attack_notebook.ipynb  data_poisoning.py  data_poisoning_attack.py  notebook.ipynb
data_preprocessing/give-me-some-credit/: give-me-some-credit.ipynb
data_preprocessing/heart_failure/: heart_failure_clinical_records_dataset_baseline.csv  heart_failure_clinical_records_dataset_leakage.csv  kaplan-meier-eda-modelling-no-leakage-f1-84.ipynb
final_results/: README.md
notebooks/: Demo_GreedyHillClimb_Synthetic.ipynb  Demo_GreedyHillClimb_Synthetic_Data.ipynb
skripts/: run_benchmark.py  run_benchmark_utils.py  test.py
src/: attack_evaluator.py  attacks.py  datasets.py  explainer.py  main.py  metrics.py  models.py
src/xai_bench/: attack_evaluator.py  base.py  console.py  stat_collector.py
src/xai_bench/attacks/: __init__.py  base_attack.py  data_poisoning_attack.py  distribution_shift_attack.py  dummy_attack.py  greedy_hill_climb.py  monte_carlo_attack.py  random_walk_attack.py  random_walk_with_memory_attack.py  switch_column_attack.py  train_lookup_attack.py
src/xai_bench/datasets/: __init__.py  base_dataset.py  compas_recidivism_racial_bias.csv  covtype_forest.py  credit_dataset.py  heart.csv  heart_dataset.py  heart_failure.py  housing.py  housing_small.csv  housing_small.py  nursery.py  prisoners.py
src/xai_bench/explainer/: __init__.py  base_explainer.py  lime_explainer.py  (+1 more)
tests/: test_explainer.py
(+15 files in other folders)
